<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/download"
        android:title="@string/downloaded"
        android:icon="@drawable/download"
        />
    <item
        android:id="@+id/favourite"
        android:title="@string/favourite"
        android:icon="@drawable/favorite"
        />
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        />
    <item
        android:id="@+id/notification"
        android:title="@string/notifications"
        android:icon="@drawable/notification"
        />
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/user_icon"
        />

</menu>