<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/logInLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LoginFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/dark_theme"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_160sdp"
        android:scaleType="fitXY"
        android:src="@drawable/logo_png"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dark_theme"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/log_back_design"
            >

            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/akaya_telivigala"
                android:includeFontPadding="false"
                android:text="@string/sign"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <LinearLayout
                android:id="@+id/form_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_8sdp"
                android:orientation="vertical"
                android:padding="@dimen/_3sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signIn">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/archivo_semibold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/archivo"
                    android:hint="enter email"
                    android:textColorHint="@color/ash_white"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:drawableLeft="@drawable/email_icon"
                    android:drawablePadding="@dimen/_5sdp"
                    android:background="@drawable/edit_text_back"
                    android:padding="@dimen/_8sdp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Password"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/archivo_semibold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/archivo"
                    android:hint="enter password"
                    android:textColorHint="@color/ash_white"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:drawableLeft="@drawable/password_icon"
                    android:drawablePadding="@dimen/_5sdp"
                    android:background="@drawable/edit_text_back"
                    android:padding="@dimen/_8sdp"
                    />


            </LinearLayout>

            <TextView
                android:id="@+id/forgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/ash_white"
                android:fontFamily="@font/archivo"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_11sdp"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/form_layout"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_11sdp"
                android:background="@drawable/edit_text_back"
                android:fontFamily="@font/archivo_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forgot"
                app:layout_constraintBottom_toTopOf="@+id/bottom_layout"
                />

            <LinearLayout
                android:id="@+id/bottom_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/submit_btn"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/have_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_40sdp"
                    android:fontFamily="@font/ceviche_one"
                    android:text="@string/have_not_account"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <TextView
                    android:id="@+id/registerBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/edit_text_back"
                    android:fontFamily="@font/ceviche_one"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp"
                    android:layout_marginStart="@dimen/_8sdp"
                    />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>