<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_ground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/filterBtn"
        android:src="@drawable/filter"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/btn_back"
        android:layout_marginStart="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_5sdp"
        android:backgroundTint="@color/search_back"
        app:layout_constraintStart_toStartOf="@id/toolBar"
        app:layout_constraintTop_toTopOf="@id/searchView"
        app:layout_constraintBottom_toBottomOf="@id/searchView"
        />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:background="@drawable/btn_back"
        android:backgroundTint="@color/search_back"
        android:layout_marginHorizontal="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/filterBtn"
        app:layout_constraintTop_toTopOf="@id/toolBar"
        app:layout_constraintBottom_toBottomOf="@id/toolBar"
        app:iconifiedByDefault="false"
        tools:queryHint="@string/search_hint"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/discover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discover"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/mint"
                android:fontFamily="@font/archivo"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_6sdp"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/slider_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_2sdp"
                android:layout_marginHorizontal="@dimen/_2sdp"
                android:layout_marginTop="@dimen/_3sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/discover">

                <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                    android:id="@+id/carousel"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    app:carouselType="BLOCK"
                    app:carouselGravity="CENTER"
                    app:scaleOnScroll="true"
                    app:scalingFactor="0.20"
                    app:autoWidthFixing="true"
                    app:autoPlay="true"
                    app:autoPlayDelay="3500"
                    app:infiniteCarousel="true"
                    app:touchToPause="true"
                    app:imageScaleType="centerCrop"
                    app:showIndicator="true"
                    app:showNavigationButtons="false"
                    app:carouselBackground="@color/back_ground"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="@dimen/_10ssp"
                android:textColor="@color/mint"
                android:fontFamily="@font/archivo"
                android:layout_marginTop="@dimen/_7sdp"
                android:layout_marginLeft="@dimen/_6sdp"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/slider_card"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categories_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_3sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/category_card_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categories"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayout"
                android:layout_width="0dp"
                android:layout_height="28dp"
                android:layout_marginTop="@dimen/_7sdp"
                android:background="@color/book_card_back"
                android:paddingTop="@dimen/_1sdp"
                android:paddingHorizontal="@dimen/_2sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/categories_recyclerView"
                app:tabIndicator="@drawable/indicator_tab"
                app:tabIndicatorAnimationMode="elastic"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorGravity="stretch"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/sky"
                app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
                app:tabTextColor="@color/ash_white" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tablayout"
                app:layout_constraintBottom_toTopOf="@id/lastLayout"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lastLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewPager"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/bookOfMonthTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/archivo"
                    android:text="Book Of The Month"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/mint"
                    android:layout_marginLeft="@dimen/_6sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/bookOfTheMonthCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="@dimen/_15sdp"
                    app:cardCornerRadius="@dimen/_7sdp"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:layout_marginHorizontal="@dimen/_3sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bookOfMonthTxt"
                    >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/_7sdp"
                        android:background="@color/card_back_new"
                        >

                        <androidx.cardview.widget.CardView
                            android:id="@+id/bookOfTheMonthImgCard"
                            android:layout_width="@dimen/_120sdp"
                            android:layout_height="@dimen/_130sdp"
                            app:cardCornerRadius="@dimen/_5sdp"
                            app:cardElevation="@dimen/_7sdp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">
                            <ImageView
                                android:id="@+id/bookOtherMonthImage"
                                android:src="@drawable/placeholder"
                                android:scaleType="fitXY"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>
                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:id="@+id/bookOtherMonthName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/archivo_semibold"
                            android:text="@string/book"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp"
                            android:gravity="start"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            app:layout_constraintStart_toEndOf="@id/bookOfTheMonthImgCard"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/bookOtherMonthAuthorName"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/archivo"
                            android:text="@string/author"
                            android:textColor="@color/ash_white"
                            android:textSize="@dimen/_9ssp"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            app:layout_constraintStart_toEndOf="@id/bookOfTheMonthImgCard"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/bookOtherMonthName"/>

                        <TextView
                            android:id="@+id/bookOtherMonthShortDescription"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:fontFamily="@font/archivo"
                            android:text="@string/author"
                            android:textColor="@color/back"
                            android:textSize="@dimen/_9ssp"
                            android:maxLines="8"
                            android:ellipsize="end"
                            android:maxWidth="@dimen/_100sdp"
                            android:layout_marginHorizontal="@dimen/_5sdp"
                            app:layout_constraintStart_toEndOf="@id/bookOfTheMonthImgCard"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/bookOtherMonthAuthorName"
                            app:layout_constraintBottom_toTopOf="@id/ratting_bar"
                            />

                        <RatingBar
                            android:id="@+id/ratting_bar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginBottom="@dimen/_4sdp"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:layout_marginHorizontal="@dimen/_8sdp"
                            android:numStars="5"
                            android:rating="4.5"
                            style="?android:attr/ratingBarStyleSmall"
                            app:layout_goneMarginTop="@dimen/_3sdp"
                            app:layout_constraintStart_toEndOf="@id/bookOfTheMonthImgCard"
                            app:layout_constraintBottom_toBottomOf="parent"
                            />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/mostRead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_read"
                    android:textSize="@dimen/_10ssp"
                    android:textColor="@color/mint"
                    android:fontFamily="@font/archivo"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:layout_marginLeft="@dimen/_6sdp"
                    android:includeFontPadding="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bookOfTheMonthCard"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mostReadRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/most_read_layout"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mostRead"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>